# hackerbot-cplusplus-package

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONSTRAINTS.md  DIDAKTIEK.md  Doxyfile.in  LICENSE  MIGRATION_PROPOSAL.md  PATTERNS.md  README.md  STYLE_GUIDE.md  TASKS.md  toolchain-rpi.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
docs/: overview.puml
include/hackerbot/: Hackerbot.hpp
include/hackerbot/base/: BaseDriver.hpp  BaseFacade.hpp  BaseTypes.hpp  MapsService.hpp
include/hackerbot/core/: CoreService.hpp  RobotState.hpp
include/hackerbot/protocol/: CommandCodec.hpp  ResponseParser.hpp
include/hackerbot/transport/: SerialPortConfig.hpp  SerialTransport.hpp
src/: main.cpp
src/base/: BaseDriver.cpp  BaseFacade.cpp  MapsService.cpp
src/core/: CoreService.cpp
src/hackerbot/: Hackerbot.cpp
src/protocol/: CommandCodec.cpp  ResponseParser.cpp
src/transport/: SerialTransport.cpp
tests/: CMakeLists.txt
tests/unit/: SerialTransportTestDoubles.hpp  test_base.cpp  test_core.cpp  test_hackerbot.cpp  test_maps.cpp  test_protocol.cpp  test_transport.cpp
